--- a/环境设置.md
+++ b/环境设置.md
@@ -1,6 +1,17 @@
+## 环境设置
+
 ```bash
-uv venv
-source .venv/bin/activate
-uv pip install -e . -i https://mirrors.aliyun.com/pypi/simple
-uv pip compile -i https://mirrors.aliyun.com/pypi/simple requirements.txt -o pylock.toml --format=pylock.toml
+conda create -n verl python=3.11
+conda activate verl
+pip install -e . -i https://mirrors.aliyun.com/pypi/simple
+pip install vllm -i https://mirrors.aliyun.com/pypi/simple
 ```
+
+
+## 使用方式
+1. 配置环境
+2. `examples/data_preprocess/demo.py`把数据从`json`转换为`parquet`格式
+3. 添加新写的奖励脚本`/verl/workers/reward_manager/external.py`
+4. `verl/workers/reward_manager/__init__.py`添加新写的类
+5. 编辑`examples/grpo_trainer/run_qwen3_8b_llm_external.sh`, `chmod +x ...`
+6. `./examples/grpo_trainer/run_qwen3_8b_llm_external.sh`
