--- a/环境设置.md
+++ b/环境设置.md
@@ -30,6 +30,11 @@ pip install flashinfer-python
 docker pull verlai/verl:app-verl0.4-vllm0.8.5-mcore0.12.1
 ```
 
+> 保存镜像
+> ```
+> docker save -o verl.tar verlai/verl:app-verl0.4-vllm0.8.5-mcore0.12.1
+> ```
+
 ### 构建容器
 ```bash
 docker create \
@@ -46,7 +51,8 @@ docker create \
     verlai/verl:app-verl0.4-vllm0.8.5-mcore0.12.1 \
     sleep infinity
 ```
-- `--shm-size`参数在宿主机执行`df -h /dev/shm`来确定
+- `--shm-size` 参数在宿主机执行 `df -h /dev/shm` 来确定
+- `--ulimit memlock=-1`
 
 
 ```bash
