--- a/使用文档.md
+++ b/使用文档.md
@@ -93,6 +93,21 @@ cd verl
 nohup ./examples/grpo_trainer/run_qwen3_32b_llm_external_in_docker.sh  > ./train.log 2>&1 &
 ```
 
+### 合并
+若未指定`trainer.default_local_dir`，默认保存位置为`checkpoints/${trainer.project_name}/${trainer.experiment_name}/global_step_1/actor`
+```bash
+python3 -m verl.model_merger merge \
+    --backend fsdp \
+    --local_dir checkpoints/${trainer.project_name}/${trainer.experiment_name}/global_step_1/actor \
+    --target_dir checkpoints/${trainer.project_name}/${trainer.experiment_name}/global_step_1/actor/huggingface
+```
+
+python3 -m verl.model_merger merge \
+    --backend fsdp \
+    --local_dir /experiments/Qwen3-32B-202507131348/global_step_30/actor \
+    --target_dir /model/Fine-tuned/Qwen3-32B
+
+
 
 ### Debug
 ```bash
