--- a/流程图.md
+++ b/流程图.md
@@ -1,13 +1,14 @@
 ```mermaid
-flowchart TB
+flowchart LR
 subgraph W2["Initialize"]
-    WP[Process Data] --> A
-    D1[Data Prepare] --> A
-    A[TaskRunner] --> B1[RayPPOTrainer]
-    B1 --> Workers
+WP[Process Data] --> A
+direction TB D1[Data Prepare] --> A
+A[TaskRunner] --> B1[RayPPOTrainer]
+B1 --> Workers
 
     subgraph Workers["Workers"]
-        WA[ActorRolloutWorker] --> WD[FSDP Engine]
+        direction TB
+                WA[ActorRolloutWorker] --> WD[FSDP Engine]
         WB[CriticWorker] --> WD
         WC[RewardModelWorker] --> WD
         WD --> WE[SGLang Engine]
@@ -17,6 +18,7 @@ subgraph W2["Initialize"]
 end 
 
 subgraph W3["Train Loop"]
+    direction TB
     E[DataLoader] --> RolloutBox
 
     subgraph RolloutBox["Rollout"]
