[note] update note

--- a/note/使用文档.md
+++ b/note/使用文档.md
@@ -1,4 +1,17 @@
-## 环境设置
+# 使用文档
+
+## 使用方式
+
+1. 环境安装
+2. `examples/data_preprocess/demo.py`把数据从`json`转换为`parquet`格式
+3. 添加新写的奖励脚本`/verl/workers/reward_manager/external.py`
+4. `verl/workers/reward_manager/__init__.py`添加新写的类
+5. 编辑`examples/grpo_trainer/run_qwen3_8b_llm_external.sh`, `chmod +x ...`
+6. `./examples/grpo_trainer/run_qwen3_8b_llm_external.sh`
+
+## 环境安装
+
+### ~~手动安装 (不推荐)~~
 
 ```bash
 conda create -n verl python=3.11
@@ -11,66 +24,72 @@ pip install flash-attn --no-build-isolation -i https://mirrors.aliyun.com/pypi/s
 pip install flashinfer-python
 ```
 
+### Docker 安装 (推荐)
 
-## 使用方式
-1. 配置环境
-2. `examples/data_preprocess/demo.py`把数据从`json`转换为`parquet`格式
-3. 添加新写的奖励脚本`/verl/workers/reward_manager/external.py`
-4. `verl/workers/reward_manager/__init__.py`添加新写的类
-5. 编辑`examples/grpo_trainer/run_qwen3_8b_llm_external.sh`, `chmod +x ...`
-6. `./examples/grpo_trainer/run_qwen3_8b_llm_external.sh`
-
-
-## Docker
 > - https://verl.readthedocs.io/en/latest/start/install.html#installation-from-docker
 > - https://hub.docker.com/r/verlai/verl/tags
 
-### 拉取镜像
+#### 拉取镜像
+
 ```bash
-docker pull verlai/verl:app-verl0.4-vllm0.8.5-mcore0.12.1
+docker pull verlai/verl:vllm011.latest
 ```
 
 > 保存镜像
+>
 > ```
-> docker save -o verl.tar verlai/verl:app-verl0.4-vllm0.8.5-mcore0.12.1
+> docker save -o verl.tar verlai/verl:vllm011.latest
 > ```
 
-### 构建容器
+#### 构建容器
+
 ```bash
 docker create \
     --runtime=nvidia \
     --gpus all \
     --net=host \
-    --shm-size="504g" \
+    --shm-size="512g" \
     --cap-add=SYS_ADMIN \
-    -v .:/workspace/verl \
-    -v /data/cheyujie/code/all_in_one/models/huggingface:/model \
-    -v /data/cheyujie/github_fork/verl/data:/data \
+    --entrypoint /bin/bash \
+    -v /data/cheyujie/code/verl:/workspace/verl \
+    -v /data/cheyujie/models:/models \
+    -v /data/cheyujie/datasets:/datasets \
     -v /data/cheyujie/ray:/ray \
+    -w /workspace/verl \
     --name verl \
-    verlai/verl:app-verl0.4-vllm0.8.5-mcore0.12.1 \
-    sleep infinity
+    verlai/verl:vllm011.latest -c "sleep infinity"
 ```
+
 - `--shm-size` 参数在宿主机执行 `df -h /dev/shm` 来确定
+  - 如果只是服务推理、IO 压力量不大：4G ~ 8G 一般够用
+  - 含多并发请求 / 并发 stream：推荐 10G ~ 16G
+  - 1 ~ 2 卡训练：8G
+  - 4 ~ 8 卡训练：16G
+  - 16 张及以上：32G 或更多
 - `--ulimit memlock=-1`
 
+#### 启动容器
 
 ```bash
 docker start verl
 docker exec -it verl bash
 ```
 
-- 如果只是服务推理、IO压力量不大：4G ~ 8G 一般够用
+#### 安装 verl
 
-- 含多并发请求 / 并发 stream：推荐 10G ~ 16G
+```bash
+cd /workspace/verl
+pip3 install --no-deps -e .
+```
 
-- 1 ~ 2 卡训练：8G
+#### 数据转换
 
-- 4 ~ 8 卡训练：16G
+```bash
+python -m examples.cheyujie.mcq_data_preprocess
+```
 
-- 16 张及以上：32G 或更多
+#### 容器内测试奖励函数
 
-### 容器内测试奖励函数
 ```bash
 curl -X POST http://127.0.0.1:8018/reward \
   -H "Content-Type: application/json" \
@@ -82,19 +101,23 @@ curl -X POST http://127.0.0.1:8018/reward \
 ```
 
 如果没启动
+
 ```bash
 cd /workspace/verl/examples/external_reward
 nohup python verl_rm.py  > ./rm.log 2>&1 &
 ```
 
-### 训练
+## 训练
+
 ```bash
 cd verl
 nohup ./examples/grpo_trainer/run_qwen3_32b_llm_external_in_docker.sh  > ./train.log 2>&1 &
 ```
 
-### 合并
+## 合并
+
 若未指定`trainer.default_local_dir`，默认保存位置为`checkpoints/${trainer.project_name}/${trainer.experiment_name}/global_step_1/actor`
+
 ```bash
 python3 -m verl.model_merger merge \
     --backend fsdp \
@@ -103,13 +126,12 @@ python3 -m verl.model_merger merge \
 ```
 
 python3 -m verl.model_merger merge \
-    --backend fsdp \
-    --local_dir /experiments/Qwen3-32B-202507131348/global_step_30/actor \
-    --target_dir /model/Fine-tuned/Qwen3-32B
+ --backend fsdp \
+ --local_dir /experiments/Qwen3-32B-202507131348/global_step_30/actor \
+ --target_dir /model/Fine-tuned/Qwen3-32B
 
+## Debug
 
-
-### Debug
 ```bash
 ulimit -u 65535
 ```
