[note] update megatron

--- a/examples/cheyujie/步骤.md
+++ b/examples/cheyujie/步骤.md
@@ -18,3 +18,23 @@
 ```bash
 python -m examples.cheyujie.mcq_data_preprocess
 ```
+
+## 训练
+
+### 单机
+
+```bash
+nohup ./examples/cheyujie/run_single_node.sh > ./train.log 2>&1 &
+```
+
+### 多机
+
+```bash
+./examples/cheyujie/run_multi_node.sh
+```
+
+### Megatron
+
+1. 权重转换: `python scripts/converter_hf_to_mcore.py --hf_model_path $HF_MODEL_PATH --output_path $DIST_CKPT_PATH`
+
+2. 训练: `./examples/cheyujie/run_megatron.sh`
