--- a/note/使用文档.md
+++ b/note/使用文档.md
@@ -108,11 +108,24 @@ nohup python verl_rm.py  > ./rm.log 2>&1 &
 ```
 
 ## 训练
-
+### 单机
 ```bash
 cd verl
-nohup ./examples/grpo_trainer/run_qwen3_32b_llm_external_in_docker.sh  > ./train.log 2>&1 &
+nohup ./examples/cheyujie/run_single_node.sh > ./train.log 2>&1 &
 ```
+
+### 多机
+1. 主节点: `ray start --head --dashboard-host=0.0.0.0` (运行后会提示后续操作步骤)
+2. 从节点: `ray start --address=<address>`
+3. 编写脚本
+4. 启动训练: `./examples/cheyujie/run_multi_node.sh`
+
+### Megatron
+
+1. 权重转换: `python scripts/converter_hf_to_mcore.py --hf_model_path $HF_MODEL_PATH --output_path $DIST_CKPT_PATH`
+
+2. 训练: `./examples/cheyujie/run_megatron.sh`
+
 
 ## 合并
 
