--- a/examples/cheyujie/步骤.md
+++ b/examples/cheyujie/步骤.md
@@ -23,18 +23,32 @@ python -m examples.cheyujie.mcq_data_preprocess
 
 ### 单机
 
+#### SFT
 ```bash
-nohup ./examples/cheyujie/run_single_node.sh > ./train.log 2>&1 &
+nohup ./examples/cheyujie/sft_run_single_node.sh > ./train.log 2>&1 &
 ```
+
+#### RL
+```bash
+nohup ./examples/cheyujie/rl_run_single_node.sh > ./train.log 2>&1 &
+```
+
 
 ### 多机
 
+#### SFT
 ```bash
-./examples/cheyujie/run_multi_node.sh
+```
+
+#### RL
+```bash
+./examples/cheyujie/rl_run_multi_node.sh
 ```
 
 ### Megatron
 
+#### RL
+
 1. 权重转换: `python scripts/converter_hf_to_mcore.py --hf_model_path $HF_MODEL_PATH --output_path $DIST_CKPT_PATH`
 
-2. 训练: `./examples/cheyujie/run_megatron.sh`
+2. 训练: `./examples/cheyujie/rl_run_megatron.sh`
