[note] update sft

--- a/note/使用文档.md
+++ b/note/使用文档.md
@@ -109,6 +109,11 @@ nohup python verl_rm.py  > ./rm.log 2>&1 &
 
 ## 训练
 ### 单机
+#### SFT
+```bash
+./examples/cheyujie/sft_run_single_node.sh 2>&1 | tee -a train.log
+```
+
 #### RL
 ```bash
 cd verl
@@ -116,6 +121,11 @@ nohup ./examples/cheyujie/rl_run_single_node.sh > ./train.log 2>&1 &
 ```
 
 ### 多机
+#### SFT
+```bash
+./examples/cheyujie/sft_run_multi_node.sh 2>&1 | tee -a train.log
+```
+
 #### RL
 1. 主节点: `ray start --head --dashboard-host=0.0.0.0` (运行后会提示后续操作步骤)
 2. 从节点: `ray start --address=<address>`
